--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap");
 
 header {
-    background-color: #171717;
+    background-color: #17171777;
     font-family: "Noto Sans JP", Segoe UI, sans-serif;
 }
 body {
-    background-color: #000000FF;
+    background-color: #1f1f1f;
     background-image: url("footerWall.jpg");
     background-size: contain;
     background-position: bottom;
@@ -13,7 +13,7 @@ body {
     font-family: "Noto Sans JP", Segoe UI, sans-serif;
 }
 .buttons {
-    background-color: #000000;
+    background-color: #0078d7;
     border: solid;
     border-width: 2px;
     border-color: #575757;
@@ -45,4 +45,14 @@ body {
 .item-2 {
     flex-grow: 1;
     flex-shrink: 0;
+}
+
+#hidden-file-uploader {
+    cursor: pointer;
+}
+
+#upload-photo {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
 }
